--- a/client/src/site-search/search-results.scss
+++ b/client/src/site-search/search-results.scss
@@ -8,6 +8,10 @@
     font-style: italic;
     font-size: 0.9rem;
   }
+  span.summary {
+    display: block;
+    font-size: 0.9rem;
+  }
   span.nerd-data {
     margin-left: 20px;
     font-size: 80%;
