--- a/kumascript/macros/CSS_Ref.ejs
+++ b/kumascript/macros/CSS_Ref.ejs
@@ -13,11 +13,11 @@
        defaults to ['standard', 'experimental'])
 */
 
-var data = require('mdn-data/css');
-var types = ["properties", "selectors", "types", "syntaxes", "at-rules",
+const data = require('mdn-data/css');
+let types = ["properties", "selectors", "types", "syntaxes", "at-rules",
              "descriptors", "units"];
-var groupingType = "alphabetically";
-var outputStatuses = ["standard", "experimental"];
+let groupingType = "alphabetically";
+let outputStatuses = ["standard", "experimental"];
 
 if ($0) {
     types = JSON.parse($0);
@@ -40,8 +40,8 @@ function normalize(str) {
 }
 
 function compareItems(itemA, itemB) {
-    var normalizedItemA = normalize(itemA.label);
-    var normalizedItemB = normalize(itemB.label);
+    let normalizedItemA = normalize(itemA.label);
+    let normalizedItemB = normalize(itemB.label);
     if (normalizedItemA === normalizedItemB) {
         if (itemA.label === itemB.label) {
             return 0;
@@ -54,25 +54,25 @@ function compareItems(itemA, itemB) {
 }
 
 function getItemsFromSyntax(syntax) {
-    var items = syntax.match(/[\w\-]+\([\w\-<>,#+*?\[\]\| ]*\)|@[\w\-]+/g) || [];
-    for (var i = 0; i < items.length; i++) {
+    let items = syntax.match(/[\w\-]+\([\w\-<>,#+*?\[\]\| ]*\)|@[\w\-]+/g) || [];
+    for (let i = 0; i < items.length; i++) {
         // Remove parameters
         items[i] = items[i].replace(/\(.*?\)/, "()");
     }
     return items;
 }
 
-var index = {};
+let index = {};
 
 if (types.some(function(type) { return type === "properties"; })) {
     // Add properties to index
-    for (var prop in data.properties) {
+    for (let prop in data.properties) {
         // Exclude properties that don't have the right status
         if (outputStatuses.indexOf(data.properties[prop].status) === -1) {
             continue;
         }
 
-        var initial = prop[0].toUpperCase();
+        let initial = prop[0].toUpperCase();
 
         if (!Object.prototype.hasOwnProperty.call(index, initial)) {
             index[initial] = [];
@@ -87,26 +87,26 @@ if (types.some(function(type) { return type === "properties"; })) {
 
 if (types.some(function(type) { return type === "types"; })) {
     // Add types to index
-    for (var type in data.types) {
+    for (let type in data.types) {
         // Exclude types that don't have the right status
         if (outputStatuses.indexOf(data.types[type].status) === -1) {
             continue;
         }
 
-        var normalizedType = normalize(type);
-        var initial = normalizedType[0].toUpperCase();
+        let normalizedType = normalize(type);
+        let initial = normalizedType[0].toUpperCase();
 
         if (!Object.prototype.hasOwnProperty.call(index, initial)) {
             index[initial] = [];
         }
 
-        var label = type;
+        let label = type;
         if (label.charAt(0) != "<") {
             // https://github.com/mdn/data/pull/81 was merged
             label =  `<${type}>`;
         }
 
-        var item = {
+        let item = {
             urlPath: "",
             label: label
         };
@@ -136,10 +136,10 @@ if (types.some(function(type) { return type === "types"; })) {
 if (types.some(function(type) { return type === "syntaxes"; })) {
     // Add value syntaxes to index
 
-    var syntaxes = data.syntaxes;
+    let syntaxes = data.syntaxes;
     for (let syntax of Object.keys(syntaxes)) {
         if (syntax.match(/\(\)$/)) {
-            var initial = normalize(syntax)[0].toUpperCase();
+            let initial = normalize(syntax)[0].toUpperCase();
 
             if (!Object.prototype.hasOwnProperty.call(index, initial)) {
                 index[initial] = [];
@@ -153,14 +153,14 @@ if (types.some(function(type) { return type === "syntaxes"; })) {
 
         // Add items within at-rule syntax (e.g. "@annotation")
         // check whether https://github.com/mdn/data/pull/66 was merged
-        var items = getItemsFromSyntax(syntaxes[syntax].syntax || syntaxes[syntax]);
+        let items = getItemsFromSyntax(syntaxes[syntax].syntax || syntaxes[syntax]);
 
-        for (var i = 0; i < items.length; i++) {
+        for (let i = 0; i < items.length; i++) {
             if (syntaxes[items[i]] && outputStatuses.indexOf(syntaxes[items[i]]) === -1) {
                 continue;
             }
 
-            var initial = normalize(items[i])[0].toUpperCase();
+            let initial = normalize(items[i])[0].toUpperCase();
 
             if (!Object.prototype.hasOwnProperty.call(index, initial)) {
                 index[initial] = [];
@@ -176,13 +176,13 @@ if (types.some(function(type) { return type === "syntaxes"; })) {
 
 if (types.some(function(type) { return type === "at-rules"; })) {
     // Add at-rules to index
-    for (var atRule in data.atRules) {
+    for (let atRule in data.atRules) {
         // Exclude at-rules that don't have the right status
         if (outputStatuses.indexOf(data.atRules[atRule].status) === -1) {
             continue;
         }
 
-        var initial = normalize(atRule)[0].toUpperCase();
+        let initial = normalize(atRule)[0].toUpperCase();
 
         if (!Object.prototype.hasOwnProperty.call(index, initial)) {
             index[initial] = [];
@@ -195,15 +195,15 @@ if (types.some(function(type) { return type === "at-rules"; })) {
 
         // Add items within at-rule syntax
         if (data.atRules[atRule].syntax) {
-            var items = getItemsFromSyntax(data.atRules[atRule].syntax);
+            let items = getItemsFromSyntax(data.atRules[atRule].syntax);
 
-            for (var i = 0; i < items.length; i++) {
+            for (let i = 0; i < items.length; i++) {
                 // Exclude the at-rule itself when its inside the syntax
                 if (items[i] === atRule) {
                     continue;
                 }
 
-                var initial = normalize(items[i])[0].toUpperCase();
+                let initial = normalize(items[i])[0].toUpperCase();
 
                 if (!Object.prototype.hasOwnProperty.call(index, initial)) {
                     index[initial] = [];
@@ -218,14 +218,14 @@ if (types.some(function(type) { return type === "at-rules"; })) {
 
         if (types.some(function(type) { return type === "descriptors"; })) {
             // Add the at-rule's descriptors
-            for (var descriptor in data.atRules[atRule].descriptors) {
+            for (let descriptor in data.atRules[atRule].descriptors) {
                 // Exclude descriptors that don't have the right status
                 if (outputStatuses.indexOf(data.atRules[atRule].
                     descriptors[descriptor].status) === -1) {
                     continue;
                 }
 
-                var initial = descriptor[0].toUpperCase();
+                let initial = descriptor[0].toUpperCase();
 
                 if (!Object.prototype.hasOwnProperty.call(index, initial)) {
                     index[initial] = [];
@@ -237,11 +237,11 @@ if (types.some(function(type) { return type === "at-rules"; })) {
                 });
 
                 // Add items within descriptor syntax
-                var items = getItemsFromSyntax(
+                let items = getItemsFromSyntax(
                     data.atRules[atRule].descriptors[descriptor].syntax);
 
-                for (var i = 0; i < items.length; i++) {
-                    var initial = normalize(items[i])[0].toUpperCase();
+                for (let i = 0; i < items.length; i++) {
+                    let initial = normalize(items[i])[0].toUpperCase();
 
                     if (!Object.prototype.hasOwnProperty.call(index, initial)) {
                         index[initial] = [];
@@ -259,7 +259,7 @@ if (types.some(function(type) { return type === "at-rules"; })) {
 
 if (types.some(function(type) { return type === "selectors"; })) {
     // Add selectors to index
-    for (var selector in data.selectors) {
+    for (let selector in data.selectors) {
         // Exclude selectors that don't have the right status
         if (outputStatuses.indexOf(data.selectors[selector].status) === -1) {
             continue;
@@ -270,7 +270,7 @@ if (types.some(function(type) { return type === "selectors"; })) {
             continue;
         }
 
-        var initial = normalize(selector)[0].toUpperCase();
+        let initial = normalize(selector)[0].toUpperCase();
 
         if (!Object.prototype.hasOwnProperty.call(index, initial)) {
             index[initial] = [];
@@ -285,19 +285,19 @@ if (types.some(function(type) { return type === "selectors"; })) {
 
 if (types.some(function(type) { return type === "units"; })) {
     // Add units to index
-    for (var unit in data.units) {
+    for (let unit in data.units) {
         // Exclude units that don't have the right status
         if (outputStatuses.indexOf(data.units[unit].status) === -1) {
             continue;
         }
 
-        var initial = unit[0].toUpperCase();
+        let initial = unit[0].toUpperCase();
 
         if (!Object.prototype.hasOwnProperty.call(index, initial)) {
             index[initial] = [];
         }
 
-        var unitInfo = {
+        let unitInfo = {
             urlPath: unit,
             label: unit
         };
@@ -332,7 +332,7 @@ if (types.some(function(type) { return type === "units"; })) {
     }
 }
 
-var characters = Object.keys(index).sort();
+let characters = Object.keys(index).sort();
 
 // Add missing items
 if (types.indexOf("types") !== -1) {
@@ -395,9 +395,9 @@ if (types.indexOf("properties") !== -1) {
 }
 
 // Adjust data for output
-for (var i in characters) {
-    for (var j = index[characters[i]].length - 1; j >= 0; j--) {
-        var item = index[characters[i]][j];
+for (let i in characters) {
+    for (let j = index[characters[i]].length - 1; j >= 0; j--) {
+        let item = index[characters[i]][j];
 
         switch (item.label) {
             case "::after":
@@ -521,11 +521,11 @@ for (var i in characters) {
 }
 
 // Removed duplicates
-for (var i in characters) {
+for (let i in characters) {
     index[characters[i]].sort(compareItems);
 
-    for (var j = index[characters[i]].length - 1; j >= 0; j--) {
-        var item = index[characters[i]][j];
+    for (let j = index[characters[i]].length - 1; j >= 0; j--) {
+        let item = index[characters[i]][j];
 
         if (j !== 0 && item.urlPath === index[characters[i]][j - 1].urlPath) {
           index[characters[i]].splice(j, 1);
@@ -533,23 +533,23 @@ for (var i in characters) {
     }
 }
 
-var output = "";
+let output = "";
 
 if (groupingType === "no") {
     output = "<ul>";
 }
 
-var baseURL = `/${env.locale}/docs/Web/CSS/`;
+let baseURL = `/${env.locale}/docs/Web/CSS/`;
 
-for (var characterIndex in characters) {
-    var character = characters[characterIndex];
+for (let characterIndex in characters) {
+    let character = characters[characterIndex];
 
     if (groupingType === "alphabetically") {
         output += `<span>${character}</span><ul>`;
     }
 
-    for (var i = 0; i < index[character].length; i++) {
-        var url = baseURL + index[character][i].urlPath;
+    for (let i = 0; i < index[character].length; i++) {
+        let url = baseURL + index[character][i].urlPath;
         output += `<li><a href="${url}"><code>${htmlEscape(index[character][i].label)}</code></a></li>`;
     }
 
