--- a/kumascript/macros/CSS_Ref.ejs
+++ b/kumascript/macros/CSS_Ref.ejs
@@ -36,7 +36,7 @@ function htmlEscape(str) {
 }
 
 function normalize(str) {
-    return str.replace(/ \(@[\w\-]+\)$/, "").replace(/@[\w\-]+\/|[^a-z0-9\(\)\-]/gi, "");
+    return str.replace(/ \(@[\w-]+\)$/, "").replace(/@[\w-]+\/|[^a-z0-9()-]/gi, "");
 }
 
 function compareItems(itemA, itemB) {
@@ -54,7 +54,7 @@ function compareItems(itemA, itemB) {
 }
 
 function getItemsFromSyntax(syntax) {
-    let items = syntax.match(/[\w\-]+\([\w\-<>,#+*?\[\]\| ]*\)|@[\w\-]+/g) || [];
+    let items = syntax.match(/[\w-]+\([\w\-<>,#+*?[\]| ]*\)|@[\w-]+/g) || [];
     for (let i = 0; i < items.length; i++) {
         // Remove parameters
         items[i] = items[i].replace(/\(.*?\)/, "()");
