fix: redesign of language selector
Implement redesign of language selector and related interactions.
This also includes a change to how the underlying grid is implemented.

Part of #1486

--- a/client/.storybook/preview.scss
+++ b/client/.storybook/preview.scss
@@ -29,7 +29,7 @@ body {
   .document-page {
     .page-header,
     .titlebar-container,
-    .breadcrumb-container,
+    .breadcrumbs-container,
     .locale-container,
     .main-content,
     .document-toc-container,
@@ -47,7 +47,7 @@ body {
       background-color: #d2e4b7;
     }
 
-    .breadcrumb-container {
+    .breadcrumbs-container {
       background-color: #a7dddb;
     }
 
