--- a/client/src/document/organisms/toc/index.scss
+++ b/client/src/document/organisms/toc/index.scss
@@ -18,10 +18,9 @@
 
   .toc-trigger-mobile {
     border: 0;
-    border-bottom: 2px solid $primary-50;
     color: $link-color;
     font-weight: normal;
-    padding: ($base-spacing / 2);
+    padding: ($base-spacing / 2) 0;
     text-align: left;
     width: 100%;
 
