--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -6,7 +6,7 @@
 @import "~@mdn/minimalist/sass/mixins/animation";
 @import "~@mdn/minimalist/sass/mixins/utils";
 
-.page-content-container {
+.main-content {
   &.loading-document-placeholder {
     @include slow-pulse();
     fill: $neutral-550;
@@ -14,6 +14,8 @@
     width: 100%;
 
     @media #{$mq-small-desktop-and-up} {
+      // ensure the loading SVG spans the full width
+      grid-column: 1/3;
       margin: $base-spacing auto;
       max-width: $max-width-default;
       min-height: 75vh;
@@ -26,7 +28,7 @@
   padding: ($base-spacing / 2) $base-spacing $base-spacing;
 
   @media #{$mq-small-desktop-and-up} {
-    margin-bottom: $large-spacing;
+    margin-bottom: $base-spacing * 2;
   }
 
   h2,
