--- a/client/src/ui/molecules/breadcrumbs/index.scss
+++ b/client/src/ui/molecules/breadcrumbs/index.scss
@@ -5,17 +5,23 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/typography";
 
-.breadcrumbs {
+.breadcrumbs-container {
   font-size: $small-font-size;
   padding: $base-unit $base-spacing;
 
   @media #{$mq-small-desktop-and-up} {
-    padding: $base-spacing;
+    padding: ($base-spacing / 2) $base-spacing;
   }
 
   a {
-    display: flex;
     align-items: center;
+    display: flex;
+
+    &:active {
+      span {
+        @include highlighted-link-state();
+      }
+    }
   }
 
   ol {
