--- a/client/src/ui/molecules/language-menu/index.scss
+++ b/client/src/ui/molecules/language-menu/index.scss
@@ -1,21 +1,25 @@
 @import "~@mdn/minimalist/sass/vars/layout";
+@import "~@mdn/minimalist/sass/vars/typography";
 
 .language-menu {
-  padding: ($base-spacing / 2) $base-spacing;
+  margin-top: $base-spacing * 1.5;
 
-  @media #{$mq-large-desktop-and-up} {
-    text-align: right;
+  legend {
+    font-size: $medium-font-size-mobile;
+    font-weight: bold;
+
+    @media #{$mq-small-desktop-and-up} {
+      font-size: $medium-font-size;
+    }
   }
 
   select {
-    display: block;
-    margin-bottom: $base-unit;
-    width: 100%;
+    display: inline-block;
+    margin-right: $base-spacing / 4;
 
     @media #{$mq-tablet-and-up} {
       display: inline-block;
       vertical-align: text-top;
-      width: 80%;
     }
 
     @media #{$mq-small-desktop-and-up} {
@@ -25,10 +29,5 @@
 
   .button {
     max-width: inherit;
-    width: 100%;
-
-    @media #{$mq-tablet-and-up} {
-      width: auto;
-    }
   }
 }
