additional changes based on review

--- a/client/src/ui/molecules/language-toggle/index.scss
+++ b/client/src/ui/molecules/language-toggle/index.scss
@@ -20,7 +20,7 @@ ul.language-toggle {
     width: 28px;
   }
 
-  .en-switch {
+  .default {
     border-left: 1px solid $neutral-100;
     padding-left: 5px;
   }
