--- a/client/src/writers-homepage/viewed-documents.scss
+++ b/client/src/writers-homepage/viewed-documents.scss
@@ -1,3 +1,8 @@
-#recently-viewed-documents a small {
-  color: grey;
+#recently-viewed-documents {
+  a small {
+    color: grey;
+  }
+  td {
+    padding: 6px;
+  }
 }
