--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -117,8 +117,8 @@
     }
   }
 
-  /* 
-   * top navigational elements on tutorial pages 
+  /*
+   * top navigational elements on tutorial pages
    * prevnext is added for backwards compatibility
    */
   .prevnext,
@@ -145,6 +145,10 @@
   */
   .index {
     columns: 300px;
+  }
+
+  iframe {
+    border: 0;
   }
 }
 
