--- a/client/src/ui/molecules/grids/_document-page.scss
+++ b/client/src/ui/molecules/grids/_document-page.scss
@@ -27,6 +27,10 @@
 
     .breadcrumbs-container {
       grid-row: 2/3;
+
+      @media #{$mq-small-desktop-and-up} {
+        grid-column: 2/3;
+      }
     }
 
     .titlebar-container {
@@ -36,13 +40,18 @@
     .language-toggle {
       grid-column: 2/3;
       grid-row: 4/5;
+
+      @media #{$mq-small-desktop-and-up} {
+        grid-column: 1/2;
+        grid-row: 2/3;
+      }
     }
 
     .document-toc-container {
       grid-column: 1/2;
       grid-row: 4/5;
 
-      @media #{$mq-large-desktop-and-up} {
+      @media #{$mq-small-desktop-and-up} {
         grid-column: 1/2;
         grid-row: 5/6;
       }
@@ -62,10 +71,6 @@
 
       @media #{$mq-small-desktop-and-up} {
         grid-column: 1/2;
-        grid-row: 5/7;
-      }
-
-      @media #{$mq-large-desktop-and-up} {
         grid-row: 6/7;
       }
     }
