chore: cleanup use of live-sample-frame class
Clean up the use of the `live-sample-frame` class.

fix #2911

--- a/kumascript/macros/EmbedGHLiveSample.ejs
+++ b/kumascript/macros/EmbedGHLiveSample.ejs
@@ -21,7 +21,7 @@ if ($2) {
     widthHeight += "height='" + $2 + "' ";
 }
 
-str = '<iframe class="live-sample-frame" frameborder="0" ' + widthHeight + 'src="' + url + '"></iframe>';
+str = '<iframe frameborder="0" ' + widthHeight + 'src="' + url + '"></iframe>';
 
 %>
 <%- str %>
