--- a/kumascript/macros/JSRef.ejs
+++ b/kumascript/macros/JSRef.ejs
@@ -14,8 +14,6 @@ var commonl10n = JSON.parse(await template('L10n:Common'));
 var jsl10n = JSON.parse(await template('L10n:JavaScript'));
 
 var text = {
-    'refslug': mdn.getLocalString(jsl10n, 'slug_reference'),
-    'stdlibslug': mdn.getLocalString(jsl10n, 'slug_global_objects'),
     'stdlib': mdn.getLocalString(jsl10n, 'stdlib'),
     'Properties': mdn.getLocalString(commonl10n, 'Properties'),
     'Methods': mdn.getLocalString(commonl10n, 'Methods'),
@@ -34,8 +32,8 @@ var output = "";
 if (slug) {
 var locale = env.locale;
 var rtlLocales = ['ar', 'he', 'fa'];
-var slug_stdlib = '/' + env.locale + '/docs/Web/JavaScript/' + text['refslug'] + '/' + text['stdlibslug'];
-var mainObj = slug.replace('Web/JavaScript/' + text['refslug'] + '/' + text['stdlibslug'] + '/', '').split('/')[0];
+var slug_stdlib = '/' + env.locale + '/docs/Web/JavaScript/Reference/Global_Objects/';
+var mainObj = slug.replace('Web/JavaScript/Reference/Global_Objects/', '').split('/')[0];
 
 // Data for inheritance chain
 var inheritance = ["Object", "Function"];
