--- a/client/src/document/forms/modal.scss
+++ b/client/src/document/forms/modal.scss
@@ -24,6 +24,7 @@ $modal-background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
     right: 30px;
     top: 30px;
+    height: 90%;
   }
 
   .close-modal {
