--- a/kumascript/macros/CSS_Ref.ejs
+++ b/kumascript/macros/CSS_Ref.ejs
@@ -14,6 +14,7 @@
 */
 
 const data = require('mdn-data/css');
+const { smartLink } = require('../src/api/web');
 let types = ["properties", "selectors", "types", "syntaxes", "at-rules",
              "descriptors", "units"];
 let groupingType = "alphabetically";
@@ -543,7 +544,13 @@ for (let characterIndex in characters) {
 
     for (let i = 0; i < index[character].length; i++) {
         let url = baseURL + index[character][i].urlPath;
-        output += `<li><a href="${url}"><code>${htmlEscape(index[character][i].label)}</code></a></li>`;
+        output += `<li>${web.smartLink(
+            url,
+            null,
+            `<code>${htmlEscape(index[character][i].label)}</code>`,
+            index[character][i].urlPath,
+            baseURL
+        )}</li>`;
     }
 
     if (groupingType === "alphabetically") {
