--- a/client/src/ui/molecules/main-menu/index.scss
+++ b/client/src/ui/molecules/main-menu/index.scss
@@ -53,18 +53,17 @@ ul.main-menu {
       box-shadow: $menu-box-shadow;
     }
 
-    // Prevent double-highlighting if different links are focused and hovered
-    a:hover,
-    &:not(:hover) a:focus {
-      background-color: $dropdown-item-background-color;
-      color: #fff;
-      text-decoration: none;
-    }
-
     a {
       display: block;
       padding: 6px 16px;
       width: 100%;
+
+      &:hover,
+      &:focus {
+        background-color: $dropdown-item-background-color;
+        color: #fff;
+        text-decoration: none;
+      }
 
       @media #{$mq-tablet-and-up} {
         width: unset;
