--- a/client/src/site-search/_pagination.scss
+++ b/client/src/site-search/_pagination.scss
@@ -1,4 +1,9 @@
 .pagination {
+  @media #{$mq-small-desktop-and-up} {
+    display: flex;
+    justify-content: space-between;
+  }
+
   li {
     display: inline;
 
