--- a/kumascript/macros/EmbedGHLiveSample.ejs
+++ b/kumascript/macros/EmbedGHLiveSample.ejs
@@ -21,7 +21,7 @@ if ($2) {
     widthHeight += `height="${$2}" `;
 }
 
-str = `<iframe class="live-sample-frame" ${widthHeight} src="${url}"></iframe>`;
+str = `<iframe ${widthHeight} src="${url}"></iframe>`;
 
 %>
 <%- str %>
