--- a/kumascript/macros/APIRef.ejs
+++ b/kumascript/macros/APIRef.ejs
@@ -178,12 +178,6 @@ function buildSublist(pages, title) {
         }
     }
 
-    var cta = '';
-     if (!translated && locale != 'en-US') {
-        cta += ' <a href="'+ url +'$translate" style="opacity:0.5" title="'+ text['title'] + '">' + text['translate'] + '</a>';
-    }
-
-
     result += '<li>';
 
     if (hasTag(aPage, 'Experimental')) {
@@ -210,7 +204,7 @@ function buildSublist(pages, title) {
     if (slug == aPage.slug) {
         result += '<em><code>' + title + '</code></em>'
     } else {
-        result += '<a href="' + url + '"><code>' + title + '</code></a>' + cta;
+        result += '<a href="' + url + '"><code>' + title + '</code></a>';
     }
 
     if (rtlLocales.indexOf(locale) != -1) {
