--- a/kumascript/macros/CSSRef.ejs
+++ b/kumascript/macros/CSSRef.ejs
@@ -197,11 +197,6 @@ if (slug) {
             });
         }
 
-        var cta = '';
-         if (!translated && locale != 'en-US') {
-            cta += ' <a href="'+ url +'$translate" style="opacity:0.5" title="'+ text['title'] + '">' + text['translate'] + '</a>';
-        }
-
         result += '<li>';
 
         if (hasTag(aPage, 'Experimental')) {
@@ -228,7 +223,7 @@ if (slug) {
         if (slug == aPage.slug) {
             result += '<em>' + code + title + endcode + '</em>'
         } else {
-            result += '<a href="' + url + '">' + code + title + endcode + '</a>' + cta;
+            result += '<a href="' + url + '">' + code + title + endcode + '</a>';
         }
 
         if (rtlLocales.indexOf(locale) != -1) {
