--- a/kumascript/macros/InterfaceOverview.ejs
+++ b/kumascript/macros/InterfaceOverview.ejs
@@ -50,7 +50,7 @@ if (slug) {
     var strAlsoInherits = localString({
       "en-US": "Also inherits $1 from: $2"
     });
-    
+
   // Get translations of strings we need
 
     var text = {
@@ -66,7 +66,7 @@ if (slug) {
 
     // Get the information about this API specifically out of the
     // databases, as well as from the subtree below this page.
-    
+
     var mainIFPages = await page.subpagesExpand('/en-US/docs/Web/API/' + mainIF);
 
     // Scan the pages and collect the information we need about them
@@ -92,7 +92,7 @@ if (slug) {
             }
         }
     }
-    
+
     collect(mainIFPages);
 
     // Build inheritance information, if any
@@ -119,7 +119,7 @@ if (slug) {
         b = bSplit[bSplit.length - 1];
         return a.toLowerCase().localeCompare(b.toLowerCase());
     }
-    
+
     eventHandlers.sort(APISort);
     properties.sort(APISort);
     methods.sort(APISort);
@@ -149,39 +149,39 @@ if (slug) {
         }
         var result = '<h' + headLevel + '>' + title + '</h' + headLevel + '>';
         var inheritText = '';
-        
+
         if (title != text.Constructor) {
             // If there are any items in the section and there are
             // inherited interfaces:
-            
+
             if (pages.length && inherited.length) {
               inheritText = strAlsoInherits.replace(/\$1/ig,
                             title.toLocaleLowerCase());
               inheritText = inheritText.replace(/\$2/ig, inheritanceList);
             }
-    
+
             // ... if there are no items in the section and no inherited
             // interfaces:
             else if (!pages.length && !inherited.length) {
               inheritText = strNone.replace(/\$1/ig, title.toLocaleLowerCase());
             }
-    
+
             // ... if there are no items in the section but there are inherited
             // interfaces:
-    
+
             else if (!pages.length) {
               inheritText = strInherits.replace(/\$1/ig, title.toLocaleLowerCase());
               inheritText = inheritText.replace(/\$2/ig, inheritanceList);
             }
-    
+
             // ... otherwise, there are items in the section but none inherited,
             // so we don't have any special text at all.
-    
+
             if (inheritText.length) {
               result += '<p><em>' + inheritText + '</em></p>';
             }
         }
-        
+
         result += '<dl>';
 
         for (var i in pages) {
@@ -195,7 +195,6 @@ if (slug) {
             // Has the page been translated? If so, we need to use its
             // text instead of the text for English.
 
-            var translated = false;
             if (locale != 'en-US') {
                 aPage.translations.forEach(function(translation) {
                     if (translation.locale === locale) {
@@ -203,16 +202,8 @@ if (slug) {
                         url = translation.url;
                         titleSplit = htmlEscape(aPage.title).split('.');
                         title = titleSplit[titleSplit.length-1];
-                        translated = true;
                     }
                 });
-            }
-
-            // If the page hasn't been translated, we need a call to action!
-
-            var cta = '';
-             if (!translated && locale != 'en-US') {
-                cta += ' <a href="'+ url +'$translate" style="opacity:0.5" title="'+ text['title'] + '">' + text['translate'] + '</a>';
             }
 
             // Strike through items which are obsolete
@@ -259,7 +250,7 @@ if (slug) {
 
             // Add the call to action, if any, and close the title
 
-            result += cta + '</dt>';
+            result += '</dt>';
 
             // Add the summary
 
@@ -268,7 +259,7 @@ if (slug) {
 
         return result;
     }
-    
+
     // Time to do the output of the whole thing!
 
     if (ctors.length > 0) {
