--- a/client/src/document/organisms/toc/index.scss
+++ b/client/src/document/organisms/toc/index.scss
@@ -4,8 +4,12 @@
 
 .document-toc {
   font-size: $default-font-size;
-  padding: ($base-spacing / 2) $base-spacing;
+  padding: ($base-spacing / 4) $base-spacing;
   position: relative;
+
+  @media #{$mq-tablet-and-up} {
+    padding: 0 $base-spacing;
+  }
 
   h2 {
     display: none;
