--- a/client/src/ui/molecules/grids/_document-page.scss
+++ b/client/src/ui/molecules/grids/_document-page.scss
@@ -11,9 +11,7 @@
 
   .document-page {
     .page-header,
-    .titlebar-container,
-    .breadcrumbs-container,
-    .language-toggle,
+    .breadcrumb-locale-container,
     .document-toc-container,
     .main-content,
     .sidebar,
@@ -25,31 +23,12 @@
       grid-row: 1/2;
     }
 
-    .breadcrumbs-container {
+    .breadcrumb-locale-container {
       grid-row: 2/3;
-
-      @media #{$mq-small-desktop-and-up} {
-        grid-column: 2/3;
-      }
-    }
-
-    .titlebar-container {
-      grid-row: 3/4;
-    }
-
-    .language-toggle {
-      grid-column: 2/3;
-      grid-row: 4/5;
-
-      @media #{$mq-small-desktop-and-up} {
-        grid-column: 1/2;
-        grid-row: 2/3;
-      }
     }
 
     .document-toc-container {
-      grid-column: 1/2;
-      grid-row: 4/5;
+      grid-row: 3/4;
 
       @media #{$mq-small-desktop-and-up} {
         grid-column: 1/2;
@@ -58,7 +37,7 @@
     }
 
     .main-content {
-      grid-row: 5/6;
+      grid-row: 4/5;
 
       @media #{$mq-small-desktop-and-up} {
         grid-column: 2/3;
@@ -67,7 +46,7 @@
     }
 
     .sidebar {
-      grid-row: 6/7;
+      grid-row: 5/6;
 
       @media #{$mq-small-desktop-and-up} {
         grid-column: 1/2;
@@ -76,7 +55,7 @@
     }
 
     .metadata {
-      grid-row: 7/8;
+      grid-row: 6/7;
     }
   }
 }
