--- a/client/src/site-search/index.scss
+++ b/client/src/site-search/index.scss
@@ -1,14 +1,7 @@
 .site-search {
-  margin: 20px;
-  min-height: 1200px;
+  min-height: 650px;
+}
 
-  mark {
-    background-color: rgb(255, 252, 217);
-  }
-
-  h1 .current-page {
-    font-size: 80%;
-    padding-left: 10px;
-    color: grey;
-  }
+.query-string {
+  font-style: italic;
 }
