--- a/client/src/site-search/search-results.scss
+++ b/client/src/site-search/search-results.scss
@@ -2,8 +2,6 @@
 @import "~@mdn/minimalist/sass/vars/layout";
 @import "~@mdn/minimalist/sass/vars/typography";
 
-@import "../ui/molecules/pagination/index";
-
 .search-results {
   a.title {
     color: black;
@@ -37,6 +35,21 @@
   }
 }
 
+.pagination {
+  @media #{$mq-small-desktop-and-up} {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  li {
+    display: inline;
+  }
+
+  a {
+    display: inline-block;
+  }
+}
+
 .search-results-list {
   margin-bottom: $base-spacing;
 
@@ -45,15 +58,15 @@
   }
 
   .title {
+    background-color: inherit;
     color: $neutral-100;
-    text-decoration: none;
+    margin: 0;
+    margin-bottom: $base-spacing / 4;
+    padding: 0;
 
-    h3 {
-      background-color: inherit;
+    a {
       color: $neutral-100;
-      margin: 0;
-      margin-bottom: $base-spacing / 4;
-      padding: 0;
+      text-decoration: none;
     }
   }
 
