--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -9,6 +9,10 @@
 @import "./molecules/breadcrumb-locale-container";
 
 .main-content {
+  @media #{$mq-small-desktop-and-up} {
+    margin-top: $base-spacing;
+  }
+
   &.loading-document-placeholder {
     @include slow-pulse();
     fill: $neutral-550;
